src/objects/OrderApi__Store__c.object
<CustomObject>
    <description>Primary control object for publishing online stores</description>
    <fields>
        <fullName>OrderApi__Account_Match_Criteria__c</fullName>
        <description>Defines the matching rule for an account. If &quot;All Accounts&quot; is selected, the user can search by &quot;Account Search Result Fields CSV&quot;. If &quot;Domain Matching&quot; is selected, the system will automatically find an account for the contact using the given email.</description>
        <inlineHelpText>Defines the matching rule for an account. If &quot;All Accounts&quot; is selected, the user can search by &quot;Account Search Result Fields CSV&quot;. If &quot;Domain Matching&quot; is selected, the system will automatically find an account for the contact using the given email.</inlineHelpText>
        <label>Account Match Criteria</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Accounts</fullName>
                    <default>true</default>
                    <label>All Accounts</label>
                </value>
                <value>
                    <fullName>Domain Matching</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Account_Search_Result_Fields_CSV__c</fullName>
        <description>Result fields will be displayed when searching for an account.</description>
        <inlineHelpText>Result fields will be displayed when searching for an account.</inlineHelpText>
        <label>Account Search Result Fields CSV</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Additional_Payment_Types__c</fullName>
        <description>Json structured list of additional payment types displayed on the checkout page.
[
      {
            &quot;label&quot; : &quot;&lt;Name of the tab&gt;&quot;,
            &quot;link&quot; : &quot;&lt;link where the page has to be navigated&gt;&quot;,
            &quot;button_label&quot; : &quot;&lt;label of the button&gt;&quot;
      }
]</description>
        <inlineHelpText>Json structured list of additional payment types displayed on the checkout page.
[{
            &quot;label&quot; : &quot;&lt;Name of the tab&gt;&quot;,
            &quot;link&quot; : &quot;&lt;link where the page has to be navigated&gt;&quot;,
            &quot;button_label&quot; : &quot;&lt;label of the button&gt;&quot;
}]</inlineHelpText>
        <label>Additional Payment Types</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Business_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated Required Override ** Link to the related Business Group.</description>
        <inlineHelpText>** System Calculated Required Override ** Link to the related Business Group.</inlineHelpText>
        <label>Business Group</label>
        <referenceTo>OrderApi__Business_Group__c</referenceTo>
        <relationshipLabel>Stores</relationshipLabel>
        <relationshipName>Stores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Contact_Match_Custom_Field__c</fullName>
        <description>Specify any field on the Contact object (custom fields accepted) that you wish to use to match unauthenticated users to existing Contact records.</description>
        <inlineHelpText>Specify any field on the Contact object (custom fields accepted) that you wish to use to match unauthenticated users to existing Contact records.</inlineHelpText>
        <label>Contact Match Custom Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Contact_Match_Rule__c</fullName>
        <description>Select the contact match rule to use when matching unauthenticated users to existing Contact records.</description>
        <inlineHelpText>Select the contact match rule to use when matching unauthenticated users to existing Contact records.</inlineHelpText>
        <label>Contact Match Rule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EMAIL</fullName>
                    <default>true</default>
                    <label>EMAIL</label>
                </value>
                <value>
                    <fullName>AND</fullName>
                </value>
                <value>
                    <fullName>OR</fullName>
                </value>
                <value>
                    <fullName>CUSTOM</fullName>
                </value>
                <value>
                    <fullName>NONE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Default_Checkout__c</fullName>
        <description>Specifies whether customers will see guest checkout (&quot;Guest Checkout&quot;) or login to account (&quot;Account Login&quot;) as their first option during checkout.</description>
        <inlineHelpText>Specifies whether customers will see guest checkout (&quot;Guest Checkout&quot;) or login to account (&quot;Account Login&quot;) as their first option during checkout.</inlineHelpText>
        <label>Default Checkout</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Guest Checkout</fullName>
                    <default>true</default>
                    <label>Guest Checkout</label>
                </value>
                <value>
                    <fullName>Account Login</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Description__c</fullName>
        <description>Optional Store description</description>
        <inlineHelpText>Optional Store description</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Enable_Access_Permissions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked access to the Store is controlled by the related user-defined Access Permissions. Defaults unchecked - essentially enabling all public and authenticated Users access to the Store and related content.</description>
        <inlineHelpText>When checked access to the Store is controlled by the related user-defined Access Permissions. Defaults unchecked - essentially enabling all public and authenticated Users access to the Store and related content.</inlineHelpText>
        <label>RESERVED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Enable_Account_Search__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this field is checked, users can either search for an account or have their domain matched to an account. This is available for new user/contact functionality on authentication pages only.</description>
        <inlineHelpText>When this field is checked, users can either search for an account or have their domain matched to an account.</inlineHelpText>
        <label>Enable Account Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Enable_Guest_Checkout__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the Guest Checkout</description>
        <inlineHelpText>When checked, unauthenticated users will be allowed to process transactions without creating new user accounts in the system</inlineHelpText>
        <label>Enable Guest Checkout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Enable_Guest_Save_Payment__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable the ability to save payment on a guest checkout</description>
        <inlineHelpText>Enable the ability to save payment on a guest checkout</inlineHelpText>
        <label>Enable Guest Save Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Enable_Invoice_Payment_Option__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, users will be allowed to select Invoice Me as a method of payment for an order.</description>
        <inlineHelpText>When checked, users will be allowed to select Invoice Me as a method of payment for an order.</inlineHelpText>
        <label>Enable Invoice Payment Option</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Enable_Proforma_Invoice_Payment_Option__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, enables a portal user to send a proforma invoice email.</description>
        <inlineHelpText>When checked, enables a portal user to send a proforma invoice email.</inlineHelpText>
        <label>Enable Proforma Invoice Payment Option</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Gateway__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to default Payment Gateway for related Store.</description>
        <inlineHelpText>Link to default Payment Gateway for related Store.</inlineHelpText>
        <label>Payment Gateway</label>
        <referenceTo>OrderApi__Payment_Gateway__c</referenceTo>
        <relationshipLabel>Stores</relationshipLabel>
        <relationshipName>Payment_Gateway_Stores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Guest_Checkout_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Account Record for Guest Checkout Contacts to be linked to</description>
        <inlineHelpText>The default Account to use as a parent to any new Contact records created from guest (unauthenticated) users.</inlineHelpText>
        <label>Guest Checkout Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Stores</relationshipLabel>
        <relationshipName>Stores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Published__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the Store will be made available for display via the API. Defaults unchecked.</description>
        <inlineHelpText>When checked, the Store will be made available for display via the API. Defaults unchecked.</inlineHelpText>
        <label>Is Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__New_Contact_Account_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** Conditionally Required ** The user to be assigned as the owner of any new account or contact created when checking out as a guest in this store. Required when the store is configured to enable guest checkout.</description>
        <inlineHelpText>** Conditionally Required ** The user to be assigned as the owner of any new account or contact created when checking out as a guest in this store. Required when the store is configured to enable guest checkout.</inlineHelpText>
        <label>New Contact/Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Stores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__New_Contact_Fieldset_CSV__c</fullName>
        <description>The API Name of the Contact Object Fieldsets to display to users checking out as a guest/unauthenticated user. Note! First Name, Last Name, and Email are displayed by default.</description>
        <inlineHelpText>The API Name of the Contact Object Fieldsets to display to users checking out as a guest/unauthenticated user. Note! First Name, Last Name, and Email are displayed by default.</inlineHelpText>
        <label>New Contact Fieldset(s) CSV</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__New_Contact_Parent_Account_Rule__c</fullName>
        <description>** Conditionally Required ** The account to use as the parent of new contacts created when checking out as a guest in this store. Required when the store is configured to enable guest checkout.</description>
        <inlineHelpText>** Conditionally Required ** The account to use as the parent of new contacts created when checking out as a guest in this store. Required when the store is configured to enable guest checkout.</inlineHelpText>
        <label>New Contact Parent Account Rule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Guest Checkout Account</fullName>
                    <default>true</default>
                    <label>Guest Checkout Account</label>
                </value>
                <value>
                    <fullName>Person Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__New_User_Profile_ID__c</fullName>
        <inlineHelpText>System generated ID that is generated by Salesforce to be used for all new users. If not specified the default on the community will be used.</inlineHelpText>
        <label>New User Profile ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Payment_Confirmation_Message_HTML__c</fullName>
        <description>Enter a message to display to users after successfully processing payment on the checkout page. Custom HTML or plain text are acceptible forms of input.</description>
        <inlineHelpText>Enter a message to display to users after successfully processing payment on the checkout page. Custom HTML or plain text are acceptible forms of input.</inlineHelpText>
        <label>Payment Confirmation Message HTML</label>
        <length>100000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OrderApi__Require_Contact_Match_Custom_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whenc checked, the field defined in the Contact Match Custom Field will be required when checking out as a guest/unauthenticated user.</description>
        <inlineHelpText>When checked, the field defined in the Contact Match Custom Field will be required when checking out as a guest/unauthenticated user.</inlineHelpText>
        <label>Require Contact Match Custom Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Theme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SYSTEM</label>
        <referenceTo>PagesApi__Theme__c</referenceTo>
        <relationshipLabel>Stores</relationshipLabel>
        <relationshipName>Stores</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Store</label>
    <listViews>
        <fullName>OrderApi__All</fullName>
        <columns>NAME</columns>
        <columns>OrderApi__Business_Group__c</columns>
        <columns>OrderApi__Enable_Access_Permissions__c</columns>
        <columns>OrderApi__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Store Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>